# Jidou-Hikki-Django

./: .gitignore  LICENSE  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  setup.py  x.py
jh_server/: asgi.py  settings.py  urls.py  wsgi.py
jh_server/apps/jidou_hikki/: apps.py  forms.py  models.py  views.py
jh_server/apps/jidou_hikki/analyzer/: __init__.py  base.py  sudachi.py  utils.py
jh_server/apps/jidou_hikki/models/: __init__.py  notebook.py  user.py  vocabulary.py
jh_server/apps/jidou_hikki/tokenizer/: __init__.py  base.py  sudachi.py
jh_server/apps/jidou_hikki/utils/: demo.py  sudachi.py
jh_server/apps/notebook/: apps.py  models.py
jh_server/apps/notebook/api/: notebooks.py  pages.py
jh_server/apps/wordcollection/: apps.py  models.py
jh_server/services/dictionary/: base.py  schemas.py  states.py
jh_server/services/tokenizer/: __init__.py  base.py  schemas.py  states.py  utils.py
scripts/: run_demo.sh
src/: settings.py  urls.py
src/apps/common/api/: auth.py
src/apps/jidou_hikki/: apps.py  views.py
src/apps/jidou_hikki/models/: __init__.py  notebook.py  vocabulary.py
src/apps/jidou_hikki/utils/: demo.py  html.py
src/apps/notebook/: apps.py  models.py
src/apps/notebook/api/: __init__.py  notebooks.py  pages.py
src/apps/notebook/migrations/: 0001_initial.py
src/apps/wordcollection/: apps.py  models.py
src/apps/wordcollection/migrations/: 0001_initial.py
src/services/: logging.py
src/services/dictionary/: __init__.py  base.py  jamdict.py
src/services/tokenizer/: schemas.py  sudachi.py  utils.py
(+14 files in other folders)
